k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloud-architect-expat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 541701833637.dkr.ecr.us-east-1.amazonaws.com/cloud-architect-expat-backend:latest
          ports:
            - containerPort: 3000
